--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="movies">
       <ul id="films"></ul>
     </div>
-    <!-- <div class="movie-details">
+    <div class="movie-details">
       <h2 id="movie-title"></h2>
       <img id="movie-poster" src="" alt="Movie Poster">
       <p><strong>Runtime:</strong> <span id="movie-runtime"></span></p>
@@ -21,4 +21,4 @@
 
   <script src="script.js"></script>
 </body>
-</html> -->
+</html>
